@@ -67,6 +67,7 @@ export(perCapitaRates)
 export(perfectParsCharTree)
 export(phyloDiv)
 export(plotMultiDiv)
+export(plotOccData)
 export(plotTraitgram)
 export(pqr2Ps)
 export(pqsRate2sProb)
